--- a/src/Web/Grand.Web/wwwroot/theme/css/header/header.css
+++ b/src/Web/Grand.Web/wwwroot/theme/css/header/header.css
@@ -205,7 +205,7 @@
     color: #fff;
 }
 [dark-theme="true"] .qty-indicator {
-    background: #1FB0C7;
+    background: #87C255;
 }
 [dark-theme="true"] .sidebar-cart .item img {
     background-color: #2d3133;
