--- a/src/Web/Grand.Web/wwwroot/theme/css/header/header.css
+++ b/src/Web/Grand.Web/wwwroot/theme/css/header/header.css
@@ -28,7 +28,7 @@
     height: 18px;
     color: #fff;
     font-size: 12px;
-    background: #0E606C;
+    background: #87C255;
     border-radius: 100%;
 }
 .b-sidebar-header {
