--- a/src/Web/Grand.Web.Admin/wwwroot/administration/bootstrap/css/bootstrap-rtl.css
+++ b/src/Web/Grand.Web.Admin/wwwroot/administration/bootstrap/css/bootstrap-rtl.css
@@ -2674,9 +2674,9 @@ fieldset:disabled a.btn {
 }
 
 .btn-info {
-  color: #fff;
-  background-color: #17a2b8;
-  border-color: #17a2b8;
+    color: #fff;
+    background-color: #87C255;
+    border-color: #87C255;
 }
 
 .btn-info:hover {
