--- a/src/Web/Grand.Web/wwwroot/theme/css/header/header.css
+++ b/src/Web/Grand.Web/wwwroot/theme/css/header/header.css
@@ -105,11 +105,11 @@
     background-color: transparent !important;
     border: 0 !important;
 }
-.menu-toggler span {
-    width: 30px;
-    height: 3px;
-    background: #000;
-}
+    .menu-toggler span {
+        width: 30px;
+        height: 3px;
+        background: #87C255;
+    }
 
 @media (min-width: 576px) {
     .b-sidebar {
